Limit Selection to Visible broken in Weight Paint mode #51761

Closed
opened 2017-06-09 13:07:59 +02:00 by Elmo Monster · 6 comments

System Information
Operating System: Windows 7 64bit
Graphics Card: Nvidia GTX 970

Blender VersionWeightPaintVertexSelectionVisible.blend
Broken: Blender 2.78c

Short description of error
'Limit Selection to Visible' does not work in Weight Paint mode while using 'Vertex Selection Masking for Painting'

Exact steps for others to reproduce the error

  1. Set 'Viewport Shading' to Solid.
  2. Add a monkey.
  3. Add a bone.
  4. Select bone and switch to Pose mode.
  5. Select monkey and switch to Weight Paint mode.
  6. Enable 'Vertex Selection Masking for Painting' and 'Limit Selection to Visible'.
  7. Use Circle Select or Box Select to select the visible vertices.
  8. Rotate monkey to see hidden vertices selected too.
**System Information** Operating System: **Windows 7 64bit** Graphics Card: **Nvidia GTX 970** **Blender Version**[WeightPaintVertexSelectionVisible.blend](https://archive.blender.org/developer/F626158/WeightPaintVertexSelectionVisible.blend) Broken: **Blender 2.78c** **Short description of error** '**Limit Selection to Visible**' does not work in **Weight Paint mode** while using '**Vertex Selection Masking for Painting**' **Exact steps for others to reproduce the error** 1. Set '**Viewport Shading**' to **Solid**. 2. Add a monkey. 3. Add a bone. 4. Select bone and switch to **Pose** mode. 5. Select monkey and switch to **Weight Paint** mode. 6. Enable '**Vertex Selection Masking for Painting**' and '**Limit Selection to Visible**'. 7. Use **Circle Select** or **Box Select** to select the visible vertices. 8. Rotate monkey to see hidden vertices selected too.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ElmoMonster

Added subscriber: @ElmoMonster

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

True.
Simpler steps to replicate are:

  • Add a monkey.
  • Switch to Weight Paint mode.
  • Enable 'Vertex Selection Masking for Painting' and 'Limit Selection to Visible'.
  • Use Circle Select or Box Select to select the visible vertices.
  • Rotate monkey to see hidden vertices selected too.

Worked 2.75
Stopped 2.76 +

True. Simpler steps to replicate are: - Add a monkey. - Switch to Weight Paint mode. - Enable 'Vertex Selection Masking for Painting' and 'Limit Selection to Visible'. - Use Circle Select or Box Select to select the visible vertices. - Rotate monkey to see hidden vertices selected too. Worked 2.75 Stopped 2.76 +

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a247b367b0

This issue was referenced by a247b367b0f7c0486ed8eef4c2a5a753e963ea6c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51761
No description provided.