Fix T51761: wpaint select depth limit fails

Limit select fails with circle and border select.

Regression in 2.76